--- a/main/server.cfg
+++ b/main/server.cfg
@@ -2,6 +2,7 @@ set sv_pure "1"
 
 set bots_manage_fill "12"
 set bots_manage_fill_kick "1"
+set bots_main_firstIsHost "0"
 
 set scr_dm_scorelimit "0"
 set scr_dm_timelimit "0"
